--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.519.0",
     "next": "15.3.4",
     "react": "^19.0.0",
